--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".RegisterActivity" />
+        <activity
+            android:name=".Tela_Inicial"
+            android:label="@string/title_activity_tela__inicial"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".Tela_de_Interesses"
+            android:label="@string/title_activity_tela_de__interesses"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
