--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,15 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".gui.LoginActivity">
+        <activity android:name=".usuario.gui.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".gui.RegisterActivity" />
-        <activity android:name=".gui.HomeActivity"></activity>
+        <activity android:name=".usuario.gui.RegisterActivity" />
+        <activity android:name=".usuario.gui.HomeActivity"></activity>
     </application>
 
 </manifest>
