--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,20 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".usuario.gui.LoginActivity">
+        android:theme="@style/AppTheme"
+        >
+        <activity android:name=".usuario.gui.LoginActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".usuario.gui.RegisterActivity" />
-        <activity android:name=".usuario.gui.HomeActivity"></activity>
+        <activity android:name=".usuario.gui.RegisterActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".usuario.gui.HomeActivity"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
