--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        >
-        <activity android:name=".usuario.gui.LoginActivity"
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".usuario.gui.LoginActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,10 +22,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".usuario.gui.RegisterActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".usuario.gui.HomeActivity"
-            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".usuario.gui.RegisterActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".usuario.gui.HomeActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".perfil.gui.PerfilActivity"></activity>
     </application>
 
 </manifest>
