--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
             android:screenOrientation="portrait" />
         <activity android:name=".aula.gui.CadastrarAulaTutorActivity" />
         <activity android:name=".perfil.gui.EditarPerfilActivity" />
+        <activity android:name=".NavegarActivity" android:theme="@style/AppTheme.NoActionBar" android:label="@string/app_name"/>
     </application>
 
 </manifest>
