--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,11 @@
             android:screenOrientation="portrait" />
         <activity android:name=".aula.gui.CadastrarAulaTutorActivity" />
         <activity android:name=".perfil.gui.EditarPerfilActivity" />
-        <activity android:name=".NavegarActivity" android:theme="@style/AppTheme.NoActionBar" android:label="@string/app_name"/>
+        <activity android:name=".aula.gui.AlunoInscreverEmAulaActivity" />
+        <activity
+            android:name=".NavegarActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
