ListView em aulas oferecidas

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,14 +32,14 @@
         <activity
             android:name=".usuario.gui.InteressesActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".aula.gui.CadastrarAulaTutorActivity" />
         <activity android:name=".perfil.gui.EditarPerfilActivity" />
         <activity
             android:name=".aula.gui.ComprarAulaAlunoActivity"
             android:windowSoftInputMode="adjustPan|adjustResize" />
-        <activity android:name=".aula.gui.AulasOferecidasActivity"></activity>
-        <activity android:name=".usuario.gui.CoinsActivity"></activity>
-        <activity android:name=".aula.gui.AulasCompradasActivity"></activity>
+        <activity android:name=".aula.gui.AulasOferecidasActivity"/>
+        <activity android:name=".aula.gui.AulasCompradasActivity"/>
+        <activity android:name=".usuario.gui.CoinsActivity"/>
+        <activity android:name=".aula.gui.CadastrarAulaTutorActivity"/>
     </application>
 
 </manifest>
