--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,9 @@
         <activity android:name=".aula.gui.AulasOferecidasActivity"/>
         <activity android:name=".aula.gui.AulasCompradasActivity"/>
         <activity android:name=".usuario.gui.CoinsActivity"/>
-        <activity android:name=".aula.gui.CadastrarAulaTutorActivity"/>
+        <activity
+            android:name=".aula.gui.CadastrarAulaTutorActivity"
+            android:windowSoftInputMode="adjustPan|adjustResize"/>
         <activity android:name=".aula.gui.AulaProfessorActivity"/>
         <activity android:name=".aula.gui.AulaAlunoActivity"/>
         <activity android:name=".aula.gui.EditarAulaActivity"/>
