Confirmar Aula Aluno quase lá e bug no ListaAdapter

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,7 @@
         <activity android:name=".aula.gui.ConfirmarAulaProfessorActivity"/>
         <activity android:name=".perfil.gui.PerfilAlheioActivity"/>
         <activity android:name=".aula.gui.AlunosCadastradosActivity"/>
+        <activity android:name=".aula.gui.ConfirmarAulaAlunoActivity"/>
     </application>
 
 </manifest>
