--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,12 +38,14 @@
              />
         <activity
             android:name=".aula.gui.ComprarAulaAlunoActivity"
+            android:windowSoftInputMode="adjustPan|adjustResize"
              />
         <activity android:name=".aula.gui.AulasOferecidasActivity" />
         <activity android:name=".aula.gui.AulasCompradasActivity" />
         <activity android:name=".usuario.gui.CoinsActivity" />
         <activity
             android:name=".aula.gui.CadastrarAulaTutorActivity"
+            android:windowSoftInputMode="adjustPan|adjustResize"
              />
         <activity android:name=".aula.gui.AulaProfessorActivity" />
         <activity android:name=".aula.gui.AulaAlunoActivity" />
