--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -50,6 +52,7 @@
         <activity android:name=".aula.gui.AlunosCadastradosActivity" />
         <activity android:name=".rating.gui.RatingActivityAula" />
         <activity android:name=".rating.gui.RatingActivityProfessor"/>
+
     </application>
 
 </manifest>
